# aplaymidi-frontend

./: README.md  install.sh  pyproject.toml  retromidi.desktop
retromidi/: __init__.py  all_notes_off.mid  config.py  midi_utils.py  player.py
